--- a/LostAndFound.Web/packages.config
+++ b/LostAndFound.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="Bootstrap.Datepicker" version="1.6.4" targetFramework="net452" />
+  <package id="bootstrap-sortable" version="2.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
@@ -27,6 +28,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="Moment.js" version="2.3.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
