--- a/LostAndFound.Web/packages.config
+++ b/LostAndFound.Web/packages.config
@@ -28,7 +28,8 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
-  <package id="Moment.js" version="2.3.1" targetFramework="net452" />
+  <package id="Moment.js" version="2.18.1" targetFramework="net452" />
+  <package id="MomentDatepicker" version="1.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
@@ -36,6 +37,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="Twitter.Bootstrap" version="1.1.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
